--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest  # Assumes you are using pytest for testing
+          pytest  test_app.py # Assumes you are using pytest for testing
